clusters/production/terangamath/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terangamath-prod
  labels:
    name: terangamath-prod
    app: terangamath
